<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">





        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
          android:columnCount="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_columnSpan="4"
                android:textSize="60sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/clear"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/division"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/multplication"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/negative"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_1"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_2"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_3"
                android:textSize="40sp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="2"
                android:layout_rowWeight="2"
                android:layout_columnWeight="1"
                android:text="@string/plus"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_4"
                android:textSize="40sp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_5"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_6"
                android:textSize="40sp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_7"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_8"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_9"
                android:textSize="40sp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="2"
                android:layout_rowWeight="2"
                android:layout_columnWeight="1"
                android:text="@string/equal"
                android:textSize="40sp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_columnWeight="2"
                android:text="@string/key_0"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_dot"
                android:textSize="40sp" />

        </GridLayout>

    </android.support.v7.widget.CardView>

</GridLayout>